# SparkETLPipeline

./: LICENSE  README.md  main.py  pyproject.toml
data/: labels.csv
data/output/csv_20250504_130957/: processed_data.csv
etl/: csv_runner.py  dag.py  ingest.py  pandas_runner.py  run.py  simple_runner.py
etl/expectations/: __init__.py  expectations.py
